[gd_scene load_steps=8 format=3 uid="uid://ch8ljtcuvjg48"]

[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://combined_scripts/selectable_canvas_group.gd" id="1_5u6i1"]
[ext_resource type="Script" uid="uid://dbt7erpalpnhb" path="res://combined_scripts/wall_clock.gd" id="1_rsrms"]
[ext_resource type="Texture2D" uid="uid://cra23xb8qrwv4" path="res://updated_assets/lab_objects/clock.svg" id="3_6mva3"]
[ext_resource type="Script" uid="uid://dx5r3q07g68eq" path="res://combined_scripts/wall_clock_selectable_component.gd" id="4_uqfjn"]
[ext_resource type="Texture2D" uid="uid://cu5wbod0a00uj" path="res://updated_assets/lab_objects/clock_small_hand.svg" id="6_p2loy"]
[ext_resource type="Texture2D" uid="uid://7mr6rsontnyb" path="res://updated_assets/lab_objects/clock_second_hand.svg" id="7_rj6r8"]
[ext_resource type="Texture2D" uid="uid://dxce217ej6x8g" path="res://updated_assets/lab_objects/clock_big_hand.svg" id="7_x0q8p"]

[node name="WallClock" type="Node2D"]
script = ExtResource("1_rsrms")

[node name="SelectableCanvasGroup" type="CanvasGroup" parent="."]
script = ExtResource("1_5u6i1")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="Clock" type="Sprite2D" parent="SelectableCanvasGroup"]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6mva3")

[node name="SelectableComponent" type="Node2D" parent="." node_paths=PackedStringArray("interact_canvas_group")]
script = ExtResource("4_uqfjn")
interact_canvas_group = NodePath("../SelectableCanvasGroup")
metadata/_custom_type_script = "uid://musakg3k6s1l"

[node name="HourHand" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_p2loy")
offset = Vector2(-2, -60)

[node name="MinuteHand" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_x0q8p")
offset = Vector2(-2, -60)

[node name="SecondHand" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_rj6r8")
offset = Vector2(-2, -60)
